# ironclaw

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  COVERAGE_PLAN.md  Cargo.toml  FEATURE_PARITY.md
.github/workflows/: coverage.yml  e2e.yml  release.yml  test.yml
channels-src/discord/: Cargo.toml  discord.capabilities.json
channels-src/discord/src/: lib.rs
channels-src/slack/: Cargo.toml  slack.capabilities.json
channels-src/slack/src/: lib.rs
channels-src/telegram/: Cargo.toml  telegram.capabilities.json
channels-src/telegram/src/: lib.rs
channels-src/whatsapp/: Cargo.toml  whatsapp.capabilities.json
channels-src/whatsapp/src/: lib.rs
deploy/: env.example
docs/: smart-routing-spec.md
migrations/: V10__wasm_versioning.sql
registry/channels/: discord.json  slack.json  telegram.json  whatsapp.json
registry/tools/: github.json  gmail.json  google-calendar.json  google-docs.json  google-drive.json  google-sheets.json  google-slides.json  slack.json  telegram.json  web-search.json
scripts/: build-wasm-extensions.sh  check-boundaries.sh  check-version-bumps.sh  coverage.sh
src/: app.rs  error.rs  main.rs  testing.rs
src/agent/: agent_loop.rs  commands.rs  cost_guard.rs  dispatcher.rs  session.rs  submission.rs  thread_ops.rs  worker.rs
src/channels/: channel.rs  manager.rs  mod.rs  repl.rs  signal.rs
src/cli/: oauth_defaults.rs
src/config/: agent.rs  channels.rs  llm.rs  mod.rs  sandbox.rs  tunnel.rs
src/context/: manager.rs  memory.rs  state.rs
src/db/: libsql_migrations.rs
src/document_extraction/: extractors.rs  mod.rs
src/evaluation/: metrics.rs  success.rs
src/extensions/: discovery.rs  manager.rs  mod.rs  registry.rs
src/history/: store.rs
src/llm/: mod.rs  nearai_chat.rs  reasoning.rs  recording.rs  response_cache.rs  rig_adapter.rs  session.rs  smart_routing.rs
src/orchestrator/: auth.rs
src/pairing/: store.rs
src/registry/: catalog.rs  installer.rs  manifest.rs
src/safety/: mod.rs
src/sandbox/: container.rs
src/secrets/: crypto.rs  keychain.rs  types.rs
src/setup/: channels.rs  wizard.rs
src/skills/: catalog.rs  mod.rs  registry.rs
src/tools/: mod.rs  registry.rs  tool.rs
src/tunnel/: custom.rs
src/worker/: runtime.rs
src/workspace/: hygiene.rs
tests/: e2e_advanced_traces.rs  e2e_builtin_tool_coverage.rs  e2e_metrics_test.rs  e2e_recorded_trace.rs  e2e_routine_heartbeat.rs  e2e_safety_layer.rs  e2e_spot_checks.rs  e2e_status_events.rs  e2e_thread_scheduling.rs  e2e_tool_coverage.rs  e2e_trace_error_path.rs  e2e_trace_file_tools.rs  e2e_trace_memory.rs  e2e_worker_coverage.rs  e2e_workspace_coverage.rs  provider_chaos.rs  support_unit_tests.rs  telegram_auth_integration.rs  tool_schema_validation.rs  trace_format.rs  trace_llm_tests.rs  wit_compat.rs  ws_gateway_integration.rs
tests/e2e/: README.md  conftest.py  helpers.py
tests/support/: assertions.rs  cleanup.rs  instrumented_llm.rs  metrics.rs  mod.rs  test_channel.rs  test_rig.rs  trace_llm.rs
tools-src/github/: Cargo.toml  github-tool.capabilities.json
tools-src/gmail/: Cargo.toml  gmail-tool.capabilities.json
tools-src/google-calendar/: Cargo.toml  google-calendar-tool.capabilities.json
tools-src/google-docs/: Cargo.toml  google-docs-tool.capabilities.json
tools-src/google-drive/: Cargo.toml  google-drive-tool.capabilities.json
tools-src/google-drive/src/: lib.rs
tools-src/google-sheets/: Cargo.toml  (+1 more)
tools-src/telegram/: Cargo.toml  telegram-tool.capabilities.json
wit/: channel.wit  tool.wit
(+106 files in other folders)
