[package]
name = "discord-channel"
version = "0.2.0"
edition = "2021"
description = "Discord channel for IronClaw"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.36"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1



[workspace]
