[package]
name = "telegram-tool"
version = "0.2.0"
edition = "2021"
description = "Telegram user-mode integration tool for IronClaw (WASM component)"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "=0.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
grammers-mtproto = "0.8"
grammers-crypto = "0.8"
grammers-tl-types = "0.8"
num-bigint = "0.4"
getrandom = "0.3"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
